--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://truuser:mypassword@localhost:5432/ezytutors
-HOST_PORT=127.0.0.1:3000
+HOST_PORT=127.0.0.1:8080
+DATABASE_URL=postgres://ssruser:mypassword@localhost:5432/ezytutor_web_ssr
