--- a/tutor-web-app-ssr/Cargo.toml
+++ b/tutor-web-app-ssr/Cargo.toml
@@ -10,6 +10,11 @@ tera = "1.17.0"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.64"
 reqwest = "0.12.8"
+awc = "3.0.1"
+sqlx = { version = "0.6.2", default-features = false, features = [
+    "postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
+rust-argon2 = "1.0.0"
+dotenv = "0.15.0"
 
 [dev-dependencies]
 actix-rt = "2.2.0"
